Add symbols scope tree, WIP typed declaration handling

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# ======= ANTLR first generation error on VSCode workspace load =======
+specification/grammar/.antlr/qutes.tokens
+specification/grammar/.antlr/qutesBaseListener.java
+specification/grammar/.antlr/qutesLexer.java
+specification/grammar/.antlr/qutesLexer.tokens
+specification/grammar/.antlr/qutesListener.java
+specification/grammar/.antlr/qutesParser.java
+
+
 # ======= VISUAL STUDIO SECTION =======
 .vscode/*
 !.vscode/settings.json
