--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # ======= ANTLR first generation error on VSCode workspace load =======
 specification/grammar/.antlr/*.java
+*.interp
+src/qutes_antrl/
+grammar/.antlr/
+
 
 
 # ======= VISUAL STUDIO SECTION =======
