--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
     "name":"qutes_lang_codespace", 
-    "image":"mcr.microsoft.com/devcontainers/universal:2",
+    // "image":"mcr.microsoft.com/devcontainers/universal:2",
+    "image":"mcr.microsoft.com/devcontainers/python:0-3.11-bullseye",
     "customizations": {
         "vscode": {
             "extensions": ["ms-python.python", "mike-lischke.vscode-antlr4", "ms-python.vscode-pylance", "ms-python.pylint", "Gruntfuggly.todo-tree"]
@@ -8,6 +9,17 @@
         "codespaces": {
             "openFiles": ["./specification/grammar/qutes_lexer.g4", "./specification/grammar/qutes_parser.g4", "./specification/grammar/grammar_tests.qut", "./src/qutes.py", "./.devcontainer/Readme.md"]
         }
+    },
+    "features": {
+        "ghcr.io/devcontainers/features/github-cli": "latest",
+        "ghcr.io/devcontainers/features/sshd": "latest",
+        "ghcr.io/devcontainers/features/git-lfs": "latest",
+        // "ghcr.io/devcontainers/features/docker-in-docker": "latest",
+        // "ghcr.io/devcontainers/features/python":  "3.10",
+        // "ghcr.io/devcontainers/features/conda": "latest",
+        // "ghcr.io/devcontainers/features/oryx": true,
+        // "ghcr.io/devcontainers/features/common-utils": "true",
+
     },
     "postCreateCommand": "pip install --user -r requirements.txt --upgrade"
 }
