--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,10 +24,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
+        cd src
         python -m pytest tests/
         # python -m unittest discover -s ./test -p 'test*.py'
         # python -m unittest tests.grammar_test
