--- a/qutes-vscode/package.json
+++ b/qutes-vscode/package.json
@@ -1,10 +1,18 @@
 {
     "name": "qutes",
     "displayName": "Qutes",
-    "description": "Syntax highlighting for Qutes Lang",
-    "version": "1.0.0",
+    "description": "Syntax highlighting for Qutes language",
+    "author": "Gabriele Messina",
+    "publisher": "GabrieleMessina",	
+    "license": "MIT",
+    "version": "1.0.2",
     "engines": {
       "vscode": "^1.52.0"
+    },
+    "homepage": "https://gabrielemessina.github.io/qutes_lang/",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/GabrieleMessina/qutes_lang"
     },
     "categories": [
       "Programming Languages"
