--- a/qutes-vscode/package.json
+++ b/qutes-vscode/package.json
@@ -3,35 +3,46 @@
     "displayName": "Qutes",
     "description": "Syntax highlighting for Qutes language",
     "author": "Gabriele Messina",
-    "publisher": "GabrieleMessina",	
+    "publisher": "GabrieleMessina",
     "license": "MIT",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "engines": {
-      "vscode": "^1.52.0"
+        "vscode": "^1.52.0"
+    },
+    "scripts": {
+        "deploy": "vsce publish --yarn"
     },
     "homepage": "https://gabrielemessina.github.io/qutes_lang/",
     "repository": {
-      "type": "git",
-      "url": "https://github.com/GabrieleMessina/qutes_lang"
+        "type": "git",
+        "url": "https://github.com/GabrieleMessina/qutes_lang"
     },
     "categories": [
-      "Programming Languages"
+        "Programming Languages"
     ],
     "contributes": {
-      "languages": [
-        {
-          "id": "qutes",
-          "extensions": [".qut"],
-          "aliases": ["Qutes", "qutes"],
-          "configuration": "./language-configuration.json"
-        }
-      ],
-      "grammars": [
-        {
-          "language": "qutes",
-          "scopeName": "source.qutes",
-          "path": "./syntaxes/qutes.tmLanguage.json"
-        }
-      ]
+        "languages": [
+            {
+                "id": "qutes",
+                "extensions": [
+                    ".qut"
+                ],
+                "aliases": [
+                    "Qutes",
+                    "qutes"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "qutes",
+                "scopeName": "source.qutes",
+                "path": "./syntaxes/qutes.tmLanguage.json"
+            }
+        ]
+    },
+    "devDependencies": {
+        "@vscode/vsce": "^2.24.0"
     }
-  }
+}
