--- a/.github/workflows/vscode-marketplace-publish.yml
+++ b/.github/workflows/vscode-marketplace-publish.yml
@@ -14,19 +14,21 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+    - name: Change directory
+      run: cd qutes-vscode
     - name: Install Node.js
       uses: actions/setup-node@v4
       with:
         node-version: 18.x
-    - name: VSCE Test
+    - name: Install VSCE with npm
       run: | 
         npm install
-        xvfb-run -a npm test
   publish:
     runs-on: ubuntu-latest
     steps:
     - name: VSCE Publish
       if: success() && startsWith(github.ref, 'refs/tags/')
-      run: npm run deploy
+      run: | 
+        npm run deploy
       env:
         VSCE_PAT: ${{ secrets.VSCE_PAT }}
