--- a/.github/workflows/vscode-marketplace-publish.yml
+++ b/.github/workflows/vscode-marketplace-publish.yml
@@ -2,8 +2,8 @@ name: Publish VSCode Extension
 
 on:
   push:
-    paths:
-      - qutes-vscode/**
+    #paths:
+     # - qutes-vscode/**
     branches:
       - test-vsce-publish
   release:
@@ -23,7 +23,7 @@ jobs:
     - name: Install npm dependencies
       working-directory: qutes-vscode
       run: | 
-        npm install
+        npm install -g @vscode/vsce
   publish:
     runs-on: ubuntu-latest
     needs: build
