--- a/.github/workflows/vscode-marketplace-publish.yml
+++ b/.github/workflows/vscode-marketplace-publish.yml
@@ -28,8 +28,8 @@ jobs:
     needs: build
     steps:
     - name: Publish extension and increment 
-      working-directory: qutes-vscode
+      working-directory: ./qutes-vscode
       run: | 
-        vsce publish patch | git commit -a -F -
+        vsce publish
       env:
         VSCE_PAT: ${{ secrets.VSCE_PAT }}
