--- a/.github/workflows/vscode-marketplace-publish.yml
+++ b/.github/workflows/vscode-marketplace-publish.yml
@@ -28,8 +28,6 @@ jobs:
     #needs: build
     steps:
     - name: Publish extension and increment 
-      run: | 
-        ls
-        vsce publish
+      run: cd qutes-vscode && vsce publish
       env:
         VSCE_PAT: ${{ secrets.VSCE_PAT }}
