--- a/.github/workflows/vscode-marketplace-publish.yml
+++ b/.github/workflows/vscode-marketplace-publish.yml
@@ -28,6 +28,6 @@ jobs:
     #needs: build
     steps:
     - name: Publish extension and increment 
-      run: ls .
+      run: ls . | echo
       env:
         VSCE_PAT: ${{ secrets.VSCE_PAT }}
