--- a/.github/workflows/vscode-marketplace-publish.yml
+++ b/.github/workflows/vscode-marketplace-publish.yml
@@ -24,11 +24,13 @@ jobs:
       run: | 
         npm install -g @vscode/vsce
   publish:
+    defaults:
+      run:
+        working-directory: ./qutes-vscode
     runs-on: ubuntu-latest
     #needs: build
     steps:
     - name: Publish extension and increment 
-      working-directory: ./qutes_vscode
       run: vsce publish
       env:
         VSCE_PAT: ${{ secrets.VSCE_PAT }}
