--- a/.github/workflows/vscode-marketplace-publish.yml
+++ b/.github/workflows/vscode-marketplace-publish.yml
@@ -11,7 +11,10 @@ on:
     - created
 
 jobs:
-  build:
+  publish:
+    defaults:
+      run:
+        working-directory: ./app
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -23,14 +26,7 @@ jobs:
     - name: Install npm dependencies
       run: | 
         npm install -g @vscode/vsce
-  publish:
-    defaults:
-      run:
-        working-directory: ./qutes-vscode
-    runs-on: ubuntu-latest
-    #needs: build
-    steps:
-    - name: Publish extension and increment 
+    - name: Publish extension
       run: vsce publish
       env:
         VSCE_PAT: ${{ secrets.VSCE_PAT }}
