Update vscode extension publish with new github environment

--- a/.github/workflows/vscode-marketplace-publish.yml
+++ b/.github/workflows/vscode-marketplace-publish.yml
@@ -16,6 +16,9 @@ jobs:
       run:
         working-directory: qutes-vscode
     runs-on: ubuntu-latest
+    environment: 
+      name: vscode-extension
+      url: https://marketplace.visualstudio.com/items?itemName=GabrieleMessina.qutes
     steps:
     - name: Checkout
       uses: actions/checkout@v4
