Add "activationEvents" to package.json Fix vscode publish

--- a/qutes-vscode/package.json
+++ b/qutes-vscode/package.json
@@ -9,6 +9,7 @@
     "engines": {
         "vscode": "^1.52.0"
     },
+    "activationEvents": [],
     "homepage": "https://gabrielemessina.github.io/qutes_lang/",
     "repository": {
         "type": "git",
